--- a/des.css
+++ b/des.css
@@ -1361,3 +1361,10 @@ margin-right:1.2em;
     padding: 0;
     color: #707070;
 }
+
+/* for profile img */
+.profile_img{
+    width: 45px;
+    height: 45px;
+}
+
