--- a/des.css
+++ b/des.css
@@ -1375,6 +1375,7 @@ margin-right:1.2em;
 .profile_img{
     width: 45px;
     height: 45px;
+    border-radius: 50%;
 }
 
 /* for announcement tab */
