--- a/des.css
+++ b/des.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
 
 .login-border{
@@ -350,7 +351,12 @@ h1{
 .account-dashboard p{
     margin: 0;
     padding: 0;
+    width: 70px;
 }
+
+/* .indexdropdown{
+    width: 30px;
+} */
 
 
 .account-dashboard img{
@@ -806,18 +812,22 @@ background:#3d3b53;
     font-size: 18px;  
 }
 #navbarNav a{
-    color: #FD5757;
+    font-family: 'Noto Sans', sans-serif;
+    color: #202020;
     font-weight: 600;
+}
+
+#navbarNav a:hover{
+    color: #FD5757;
 }
 
 .navbar-brand{
     font-family: 'Bungee', cursive;
-    
 }
 
 .navbar-brand p{
     color:#2F2E41;
-    font-size: 2.5em;
+    font-size: 2em;
     margin-left: 10%;
 }
 
@@ -851,14 +861,19 @@ background:#3d3b53;
 .title h1{ 
 color: #202020;
 font-weight: 700;
-text-align: left !important;
+font-family: 'Noto Sans', sans-serif;
+
 }
+
 .title p{
-    color: gray;
-    text-align: left;
+    font-family: 'Noto Sans', sans-serif;
+    color: #707070;
+    font-weight: 500;
+    text-align: center;
 }
 .title button{
-    background-color: #FD5757;
+    font-family: 'Noto Sans', sans-serif;
+    background-color: #fd5757;
     border: none;
     width: 250px;
     height: 40px;
@@ -868,6 +883,7 @@ text-align: left !important;
     margin-right: auto;
 }
 .title{
+    font-family: 'Noto Sans', sans-serif;
     margin-top: 20%;
     text-align: center;
 }
@@ -883,10 +899,13 @@ text-align: left !important;
 /* for usage */
 .features{
     margin-top: -5%;
+    font-family: 'Noto Sans', sans-serif;
     background-color: #FD5757;
     padding-bottom: 10%;
 }
 .easy{
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 500;
     text-align: center;
     border: none;
     padding: 2em 1.5em;
@@ -895,7 +914,7 @@ text-align: left !important;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 2%;
+    margin-bottom: 20px;
     transition: all 500ms;
 }
 
@@ -904,13 +923,22 @@ text-align: left !important;
 }
 
 .easy h2,.recruit h2,.security h2{
+    font-family: 'Noto Sans', sans-serif;
     background-color: whitesmoke;
-    color: black;
+    color: #202020;
+    font-weight: 600;
     margin-top: 20px;
     margin-bottom: 20px;
 }
 
+.easy p, .recruit p, .security p{
+    font-family: 'Noto Sans', sans-serif;
+    color: #707070;
+    font-weight: 500;
+}
+
 .recruit{
+    font-family: 'Noto Sans', sans-serif;
     text-align: center;
     border: none;
     padding: 2em 1.5em;
@@ -919,7 +947,7 @@ text-align: left !important;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 2%;
+    margin-bottom: 20px;
     transition: all 500ms;
 }
 
@@ -928,6 +956,7 @@ text-align: left !important;
 }
 
 .security{
+    font-family: 'Noto Sans', sans-serif;
     text-align: center;
     border: none;
     padding: 2em 1.5em;
@@ -936,7 +965,7 @@ text-align: left !important;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 2%;
+    margin-bottom: 20px;
     padding-bottom: 10%;
     transition: all 500ms;
 }
@@ -947,8 +976,9 @@ text-align: left !important;
 
 /* for download */
 .download{
+    font-family: 'Noto Sans', sans-serif;
     background-color: #2f2e41;
-    padding-bottom: 1% !important;
+    padding-bottom: 1.2% !important;
 }
 .d-img{
     align-self: center;
@@ -967,13 +997,16 @@ text-align: left !important;
     margin-right: auto;
     padding-top: 20%;
     color: white;
+    font-weight: 600;
+    margin-top: 0;
 }
-.d-title h5{
+.d-title p{
     margin-left: auto;
     margin-right: auto;
-    padding-top: 10%;
-    color: white;
-    width: 70%;
+    color: #F1f1f1;
+    font-weight: 500;
+    width: 28.5rem;
+    margin-top: 20px;
     text-align: left;
 }
 .d-title button{
@@ -992,6 +1025,7 @@ text-align: left !important;
     text-align: center;
 }
 .testimonial h1{
+    font-family: 'Noto Sans', sans-serif;
     text-align: center;
     color: #2f2e41;
     font-weight: 600;
@@ -1002,8 +1036,9 @@ text-align: left !important;
     margin-right: auto;
 }
 .testimonial p{
+    font-family: 'Noto Sans', sans-serif;
     width: 50%;
-    color: gray;
+    color: #707070;
     margin-top: 2%;
     margin-left: auto;
     margin-right: auto;
@@ -1018,24 +1053,30 @@ text-align: left !important;
 
 /* for about us */
 #about{
+    font-family: 'Noto Sans', sans-serif;
     background-color: #2f2e41;
     color: white;
     padding-bottom: 10%;
 }
 .about h1{
+    font-family: 'Noto Sans', sans-serif;
     text-align: center;
+    font-weight: 600;
     margin-top: 8%;
 }
 .about p{
-    text-align: left;
+    font-family: 'Noto Sans', sans-serif;
+    text-align: center;
     width: 50%;
     margin-left: auto;
     margin-right: auto;
 }
 .about-card{
+    font-family: 'Noto Sans', sans-serif;
     text-align: center;
 }
 .about-frame{
+    font-family: 'Noto Sans', sans-serif;
     border-radius: 10px;
     border:none;
     padding: 2em 1.5em;
@@ -1043,7 +1084,7 @@ text-align: left !important;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     height: 100%;
-    width: 80%;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     margin-top: -120px;
@@ -1059,6 +1100,7 @@ text-align: left !important;
 
 .about-frame h6{
     font-weight: 600;
+    color: #202020;
 }
 
 
@@ -1078,6 +1120,7 @@ text-align: left !important;
 
 /* for footer part */
 #footer{
+    font-family: 'Noto Sans', sans-serif;
     background-color: #0f0f0f;
 }
 .footer-title p{
@@ -1111,6 +1154,75 @@ text-align: left !important;
         padding-top: 0;
     }
 }
+
+.nav-body{
+    font-family: 'Noto Sans', sans-serif;
+}
+
+/* for index responsive mobile */
+
+@media screen and (max-width: 991px){
+
+    .title button{
+        margin-bottom: 60px;
+    }
+
+    .easy{
+        width: 98%;
+        max-width: 400px;
+        margin-bottom: 8px;
+    }
+
+    .security{
+        width: 98%;
+        max-width: 400px;
+        margin-bottom: 8px;
+    }
+
+    .recruit{
+        width: 98%;
+        max-width: 400px;
+        margin-bottom: 8px;
+    }
+    
+    /* .d-img{
+        text-align: center;
+    } */
+
+    .d-title p{
+        text-align: center;
+        width: fit-content;
+    }
+
+    .download{
+        padding:2.5em 1.5em;
+    }
+
+    .testimonial p{
+        width: fit-content;
+    }
+
+    .about p{
+        width: fit-content;
+        text-align: center;
+    }
+
+    .footer-title {
+        text-align: center;
+    }
+
+    .flink > *{
+        display: flex;
+        justify-content: center;
+    }
+
+    .arr{
+        text-align: center;
+    }
+
+}
+
+
 
 /* for job listing */
 
@@ -1376,12 +1488,23 @@ margin-top: 1.3em;
     font-weight: 600;
 }
 
+.shapes{
+    width: 8px;
+    border-radius: 4px;
+    height: 998px;
+    margin-top: 4px;
+    margin-left: 5px;
+    overflow: hidden;
+    float: left;
+    background:#707070;
+}
+
 .step-progress{
     margin: auto auto;
     padding: 2em 0;
     background: #2F2E41;
     color: white;
-    width: 150px;
+    width: fit-content;
     border-radius: 8px;
 }
 
@@ -1402,6 +1525,7 @@ margin-right:1.2em;
 
 .step-progress h5{
     color: #707070;
+    
 }
 
 .step-progress p{
